fix triangles overflowing page h issue

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -366,7 +366,7 @@ footer {
     }
   }
   #contact:before, footer:before {
-    width: 105%;
+    width: 100%;
   }
   .section_padding {
     padding: 4rem 2rem;
